// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRenderer does not render the layout with the field empty in non-editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container wizard">
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-9 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-2 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout in editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container wizard">
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="radio">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0"></div>
                    </div>
                  </div>
                  <div class="col col-ddm col-empty col-md-9" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="text1">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                    </div>
                  </div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="select">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                    </div>
                  </div>
                  <div class="col col-ddm col-empty col-md-2" data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="2">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="date">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2"></div>
                    </div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="3">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="numeric">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3"></div>
                    </div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="4">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout in pagination mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container paginated">
        <div class="fade tab-pane active show" role="tabpanel">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-9 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-2 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul class="pagination pagination-root ddm-pagination justify-content-center">
          <li class="page-item visibility-hidden"><button class="page-link" type="button">«<span class="sr-only">previous</span></button></li>
          <li class="page-item active disabled"><button type="button" class="page-link" disabled="">1</button></li>
          <li class="page-item visibility-hidden"><button class="page-link" type="button">»<span class="sr-only">next</span></button></li>
        </ul>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout in wizard mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container wizard">
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-9 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-2 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout with an empty field only in editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container wizard">
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="radio">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0"></div>
                    </div>
                  </div>
                  <div class="col col-ddm col-empty col-md-9" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="text1">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                    </div>
                  </div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="select">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                    </div>
                  </div>
                  <div data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-2 col-ddm">
                    <div class="ddm-field-container ddm-target h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1"></div>
                    </div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="2">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="date">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2"></div>
                    </div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="3">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm">
                    <div class="ddm-field-container ddm-target h-100" data-field-name="numeric">
                      <div class="ddm-resize-handle ddm-resize-handle-left hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3"></div>
                      <div class="ddm-drag"><span aria-hidden="true" class="loading-animation"></span></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right hide" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3"></div>
                    </div>
                  </div>
                </div>
                <div class="placeholder row">
                  <div class="col col-ddm col-empty col-md-12" data-ddm-field-page="0" data-ddm-field-row="4">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout with pages in mode of list 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="react-component-adapter">
      <div class="ddm-form-page-container wizard">
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
              <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-3 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="0" class="col-md-9 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-4 col-ddm"><span aria-hidden="true" class="loading-animation"></span><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="1" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-6 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                  <div data-ddm-field-column="2" data-ddm-field-page="0" data-ddm-field-row="1" class="col-md-2 col-ddm"></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="2" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
              <div>
                <div class="position-relative row">
                  <div data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="3" class="col-md-12 col-ddm"><span aria-hidden="true" class="loading-animation"></span></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="lfr-ddm-form-pagination-controls"><button class="float-right lfr-ddm-form-submit btn btn-primary" type="submit">submit</button>
          <div class="ddm-btn-cancel float-right"><a class="btn btn-cancel btn-secondary">cancel</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders default markup with Success Page enabled 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="radio"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="text1"></div>
                <div class="ddm-field" data-field-name="text2"></div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field" data-field-name="select"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="date"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="numeric"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-reorder" data-ddm-reorder-page-actions="0">
        <div class="tooltip fade clay-tooltip-top" role="tooltip">
          <div class="arrow"></div>
          <div class="tooltip-inner"></div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
    <div class="page">
      <div class="sheet simple-page ddm-page-success-layout">
        <div class="form-builder-layout">
          <h5 class="pagination">success-page</h5>
          <div class="active ddm-form-page lfr-ddm-form-page form-builder-success-page"><input class="form-builder-page-header-title form-control p-0" maxlength="120" placeholder="" data-setting="title" type="text" value=""><input class="form-builder-page-header-description form-control p-0" data-setting="body" type="text" maxlength="120" placeholder="" value=""></div>
        </div>
      </div>
      <div class="ddm-paginated-builder-reorder" data-ddm-reorder-page-actions="1">
        <div class="tooltip fade clay-tooltip-top" role="tooltip">
          <div class="arrow"></div>
          <div class="tooltip-inner"></div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="1">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;
